# asic

./: .bumpversion.cfg  .flake8  .gitignore  LICENSE  README.md  bumpversion.cfg  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: publish-to-test-pypi.yml  test.yml
src/asic/: VERSION  __init__.py  __main__.py  cli.py  config.py  ftp.py  metadata.py  publication.py  reader.py
src/asic/data/: ASIC_FILE_CONFIG.jsonl  ASIC_FILE_EXTENSION_MAP.jsonl
src/asic/files/: __init__.py  adem.py  aenc.py  balcttos.py  cliq.py  desbm.py  desbmex.py  dspcttos.py  file.py  fronteras.py  initialization.py  oefagnch.py  pep.py  pubfc.py  pubfc_falla_hurto.py  sntie.py  tfroc.py  tgrl.py  trsd.py  undefined.py
src/asic/files/definitions/: PME.py  __init__.py  adem.py  aenc.py  afac.py  balcttos.py  dspcttos.py  ldcbmr.py  pep.py  pme.py  ptb.py  pubfc.py  sntie.py  tfroc.py  tgrl.py  trsd.py  trsm.py  tserv.py
src/asic/ftp/: ftp.py
tests/: TEST_ASIC_FILE_CONFIG.jsonl  conftest.py  test_PME.py  test_adem.py  test_aenc.py  test_afac.py  test_balcttos.py  test_config.py  test_datafiles.py  test_dspcttos.py  test_files.py  test_pattern_to_template.py  test_pep.py  test_pme.py  test_ptb.py  test_remote_metadata.py  test_sntie.py  test_tfroc.py  test_tgrl.py  test_trsd.py  test_trsm.py  test_tserv.py  testear_remote_metadata.py
tests/INFORMACION_XM/PUBLICOK/SIC/COMERCIA/2023-10/: PME14001.txa  adem1001.Tx2  afac10.txf  pep1001.tx1  trsm10.txf  tserv10.txf
tests/RUTA/PUBLICA/DEL/FTP/2023-10/: PME14001.txa  cliq1001.tx2  pep1001.tx1  sntie10.txf  trsd1001.tx2
tests/RUTA/PUBLICA/DEL/FTP/2025-04/: PTB0401.txf
tests/examples/: PubFC2022-07-28.xlsx  PubFC_Falla-Hurto2022-07-28.xlsx
(+14 files in other folders)
